tests/snapshots/single__pass__go_interface.snap
---
source: tests/single.rs
expression: output
---
//soppo:generated
// Tests interface type unification - io.Reader accepts *os.File
package main

import "bufio"
import "os"

func main() {
	// os.Stdin is *File, but bufio.NewReader expects io.Reader interface
	// This tests that interface types accept any implementing type
	reader := bufio.NewReader(os.Stdin)
	_ = reader
}
