tests/snapshots/single__pass__go_methods.snap
---
source: tests/single.rs
expression: output
---
//soppo:generated
package main

// Tests method calls on Go types from stdlib
import "bufio"
import "os"
import "strings"

func main() {
    // Method call on bufio.Reader (returned from bufio.NewReader)
    reader := bufio.NewReader(os.Stdin)
    text, _ := reader.ReadString('\n')
    // Method call on result of strings.TrimSpace
    trimmed := strings.TrimSpace(text)
    _ = trimmed
}
