tests/snapshots/single__pass__go_numeric_type_alias.snap
---
source: tests/single.rs
expression: output
---
//soppo:generated v1
package main

import "os"

// Test that Go type aliases with numeric underlying types accept integer literals.
// os.FileMode -> fs.FileMode -> uint32, so int literals should be accepted.
// Importantly, this works WITHOUT importing "io/fs".
func createDir(path string) error {
	// FileMode has underlying type uint32, so it should accept an int literal
	return os.MkdirAll(path, 0o755)
}

func main() {
	createDir("/tmp/test")
}
