tests/snapshots/single__pass__go_package_variables.snap
---
source: tests/single.rs
expression: output
---
//soppo:generated
package main

import "net/http"
import "os"

// Test that Go package variables are accessible.
// This tests type inference for variables declared with composite literals.
// Also tests that method calls work on these variables (requires module info).
func main() {
    // Variables declared as: var DefaultClient = &Client{}
    // Type should be inferred as *Client
    _ = http.DefaultClient

    // Variables with explicit types like: var Stdin *File
    _ = os.Stdin
    _ = os.Stdout
    _ = os.Stderr

    // Method calls on package variables should work
    // This requires the module info to be set on the type
    client := http.DefaultClient
    req, _err0 := http.NewRequest("GET", "https://example.com", nil)
    if _err0 != nil {
        return 
    }
    resp, err := client.Do(req)
    _ = resp
    _ = err
}
