tests/snapshots/single__pass__go_variables.snap
---
source: tests/single.rs
expression: output
---
//soppo:generated v1
// Tests Go package variable lookup (os.Stdin, os.Stdout, os.Stderr)
package main

import "fmt"
import "os"

func main() {
	// Package-level variables from os
	stdin := os.Stdin
	stdout := os.Stdout
	stderr := os.Stderr

	// These are *os.File types
	_ = stdin
	_ = stdout
	_ = stderr

	// Use stdout for printing
	fmt.Fprintln(os.Stdout, "Hello via os.Stdout")
}
