tests/snapshots/single__pass__infinite_loop.snap
---
source: tests/single.rs
expression: output
---
//soppo:generated
package main

import "fmt"

func main() {
	count := 0

	// Infinite loop with break
	for {
		count++
		if count >= 5 {
			break
		}
		fmt.Println(count)
	}

	fmt.Println("Done:", count)
}
