tests/snapshots/single__pass__iota.snap
---
source: tests/single.rs
expression: output
---
//soppo:generated
package main

import "fmt"

const (
    Sunday = iota
    Monday
    Tuesday
    Wednesday
    Thursday
    Friday
    Saturday
)

const (
    KB = (1 << (10 * iota))
    MB
    GB
)

func main() {
    fmt.Println(Sunday, Monday, Tuesday)
    fmt.Println(KB, MB, GB)
}
